apps/base/ray/ray.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ray-system
  labels:
    toolkit.fluxcd.io/tenant: kog-team
